--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="card">
             <span class="card-category">World</span>
             <h3 class="card-title">Example Blog Post</h3>
-            <p class="card-date">dec 12</p>
+            <strong class="card-date">dec 12</strong>
             <p class="card-description">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
               aspernatur enim consequuntur iusto cumque ducimus?
@@ -42,7 +42,7 @@
           <div class="card">
             <span class="card-category">Sport</span>
             <h3 class="card-title">Example Blog Post</h3>
-            <p class="card-date">Nov 13</p>
+            <strong class="card-date">Nov 13</strong>
             <p class="card-description">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
               aspernatur enim consequuntur iusto cumque ducimus?
@@ -54,7 +54,7 @@
           <div class="card">
             <span class="card-category">football</span>
             <h3 class="card-title">Example Blog Post</h3>
-            <p class="card-date">Nov 19</p>
+            <strong class="card-date">Nov 19</strong>
             <p class="card-description">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
               aspernatur enim consequuntur iusto cumque ducimus?
@@ -66,7 +66,7 @@
           <div class="card">
             <span class="card-category">food</span>
             <h3 class="card-title">Example Blog Post</h3>
-            <p class="card-date">Nov 22</p>
+            <strong class="card-date">Nov 22</strong>
             <p class="card-description">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
               aspernatur enim consequuntur iusto cumque ducimus?
@@ -78,7 +78,7 @@
           <div class="card">
             <span class="card-category">World</span>
             <h3 class="card-title">Example Blog Post</h3>
-            <p class="card-date">Nov 24</p>
+            <strong class="card-date">Nov 24</strong>
             <p class="card-description">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
               aspernatur enim consequuntur iusto cumque ducimus?
@@ -90,7 +90,7 @@
           <div class="card">
             <span class="card-category">World</span>
             <h3 class="card-title">Example Blog Post</h3>
-            <p class="card-date">Nov 28</p>
+            <strong class="card-date">Nov 28</strong>
             <p class="card-description">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
               aspernatur enim consequuntur iusto cumque ducimus?
