--- a/pages/post.html
+++ b/pages/post.html
@@ -21,26 +21,29 @@
           class="author-placeholder"
         />
         <div class="author-details">
-          <p class="author-name">Mohammad <span>Khaled</span></p>
-          <p class="author-description">
+          <p class="author-name">Mohammad <u>Khaled</u></p>
+          <em class="author-description">
             Lorem ipsum dolor sit amet consectetur.
-          </p>
+          </em>
         </div>
       </div>
-      <p class="blog-content">
+      <q class="blog-content" cite="https://www.facebook.com/">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime,
         dolorem.
-      </p>
+      </q>
       <blockquote class="blog-quote">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut tenetur
         eius doloribus quos modi impedit repellendus quaerat, omnis porro nobis!
       </blockquote>
+      <figure>
+        <img
+          src="../assets/image.jpg"
+          alt="Description of Image"
+          class="image-placeholder"
+        />
+        <figcaption>Manchester City 2023 Team.</figcaption>
+      </figure>
 
-      <img
-        src="../assets/image.jpg"
-        alt="Description of Image"
-        class="image-placeholder"
-      />
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, error
         corrupti. Obcaecati saepe expedita tempore minus voluptate
